# refactorpilot

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-TW.md  pyproject.toml  setup.py
refactorpilot/: __init__.py  __main__.py  analyzer.py  cli.py  detectors.py  refactor.py  suggesters.py  tui.py  utils.py
tests/: __init__.py  test_analyzer.py  test_detectors.py  test_utils.py
