[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactorpilot"
version = "1.0.0"
description = "轻量级终端代码智能重构助手"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RefactorPilot Team", email = "refactorpilot@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["refactoring", "code-quality", "cli", "python", "static-analysis"]
requires-python = ">=3.8"

[project.scripts]
refactorpilot = "refactorpilot.cli:main"
rfp = "refactorpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/refactorpilot"
"Bug Reports" = "https://github.com/gitstq/refactorpilot/issues"
Source = "https://github.com/gitstq/refactorpilot"

[tool.setuptools]
packages = ["refactorpilot"]

[tool.setuptools.package-data]
refactorpilot = ["py.typed"]
